--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
+    "start:prod": "ENV_ENVIRONMENT=production nodemon server.js",
     "debug": "ndb server.js"
   },
   "author": "omar fayez",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -21,6 +22,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.8.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "pug": "^3.0.2",
