--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "3.5",
     "helmet": "^7.0.0",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "pug": "^3.0.2",
+    "sharp": "^0.22.1",
     "slugify": "^1.6.6",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
