--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "nodemon": "^2.0.22",
     "pug": "^3.0.2",
     "sharp": "^0.22.1",
